semantic/test/fixtures/python/graphing/typeerror/typeerror.py
var = 1 + "thing"

def lup(): pass

lup()
